# verba

./: README.md  pyproject.toml
docker/: Dockerfile
src/: .gitignore  main.py  models.py  parser.py  xlsx.py
