[project]
name = "verba"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "playwright>=1.57.0",
    "playwright-stealth>=2.0.0",
    "pydantic>=2.12.5",
]
